@@ -27,12 +27,6 @@ class RemoteFatZebraTest < Test::Unit::TestCase
     assert_equal 'USD', response.params['response']['currency']
   end
 
-  def test_successful_purchase_with_descriptor
-    assert response = @gateway.purchase(@amount, @credit_card, @options.merge(:merchant => 'Merchant', :merchant_location => 'Location'))
-    assert_success response
-    assert_equal 'Approved', response.message
-  end
-
   def test_unsuccessful_multi_currency_purchase
     assert response = @gateway.purchase(@amount, @credit_card, @options.merge(:currency => 'XYZ'))
     assert_failure response
@@ -125,6 +119,12 @@ class RemoteFatZebraTest < Test::Unit::TestCase
     assert card = @gateway.store(@credit_card)
     assert purchase = @gateway.purchase(@amount, card.authorization, @options.merge(:cvv => 123))
     assert_success purchase
+  end
+
+  def test_successful_purchase_with_descriptor
+    assert response = @gateway.purchase(@amount, @credit_card, @options.merge(:merchant => 'Merchant', :merchant_location => 'Location'))
+    assert_success response
+    assert_equal 'Approved', response.message
   end
 
   def test_invalid_login
